samples/_failures_safe/1761260240_669dd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfbdb512.c: In function ‘main’:
./samples/SAFE/__tmp_dfbdb512.c:145:24: error: missing terminating " character
  145 |                 printf("  %s: %s\n
      |                        ^~~~~~~~~~~
./samples/SAFE/__tmp_dfbdb512.c:145:17: error: expected expression at end of input
  145 |                 printf("  %s: %s\n
      |                 ^~~~~~
./samples/SAFE/__tmp_dfbdb512.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dfbdb512.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dfbdb512.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dfbdb512.c:145:17: error: expected declaration or statement at end of input
